<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/main_blog_post"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_profile"
                android:layout_width="66dp"
                android:layout_height="78dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="290dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.258"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/blog_username"
                android:layout_width="184dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="70dp"
                android:padding="5dp"
                android:text="@string/post_usernam"
                android:textSize="20dp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/user_profile"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blog_postdate"
                android:layout_width="181dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:padding="5dp"
                android:text="@string/post_date"
                android:textSize="17dp"
                app:layout_constraintStart_toEndOf="@+id/user_profile"
                app:layout_constraintTop_toBottomOf="@+id/blog_username" />

            <ImageView
                android:id="@+id/blog_image_post"
                android:layout_width="364dp"
                android:layout_height="168dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile"
                app:srcCompat="@drawable/scene5" />

            <TextView
                android:id="@+id/blog_post_descriptions"
                android:layout_width="339dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"

                android:padding="15dp"
                android:text="Post Description Here!!"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_image_post" />

            <ImageView
                android:id="@+id/blog_like_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_post_descriptions"
                app:srcCompat="@mipmap/unlikesicons" />

            <TextView
                android:id="@+id/blog_like_count"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/likes"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blog_like_btn"
                app:layout_constraintTop_toBottomOf="@+id/blog_post_descriptions" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>